syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "Superheroes.Protos";

package Superheroes;

service Superheroes {
  rpc GetAll(google.protobuf.Empty) returns (GetAllResponse);
  rpc GetById(GetByIdRequest) returns (GetByIdResponse);
  rpc GetByName(GetByNameRequest) returns (GetByNameResponse);
}

message GetAllResponse {
  repeated Superhero superheroes = 1;
}

message GetByIdRequest {
  int32 id = 1;
}

message GetByIdResponse {
	Superhero superhero = 1;
}

message GetByNameRequest{
  string name = 1;
}

message GetByNameResponse {
	Superhero superhero = 1;
}

message Superhero {
  int32 id = 1;
  string name = 2;
  string slug = 3;
  Powerstats powerstats = 4;
  Appearance appearance = 5;
}

message Powerstats {
  int32 intelligence = 1;
  int32 strength = 2;
  int32 speed = 3;
  int32 durability = 4;
  int32 power = 5;
  int32 combat = 6;
}

message Appearance {
  string gender = 1;
  string race = 2;
  repeated string height = 3;
  repeated string weight = 4;
  string eyeColor = 5;
  string hairColor = 6;
}



